1. Updating: In `Sample008_SYSFS.c`, do some house-keeping, and add error handling code.

--- a/Sample004_USART_Client_Driver/Makefile
+++ b/Sample004_USART_Client_Driver/Makefile
@@ -1,4 +1,4 @@
-obj-m := Sample000_Template.o
+obj-m := Sample004_USART_Client_Driver.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
